# temp

./: .gitignore  README.md
etl_template/: .gitignore  README.md  mkdocs.yml  pyproject.toml
etl_template/docs/: Documentation_Creation.md  Generator_ETL_procs.md  Logtools.md
etl_template/docs/tmp/: Refactor.md
etl_template/input/: UsecaseV1.98.ldm
etl_template/input/codeList/dms/: DMS.core Reference Data 20240611.xls
etl_template/src/dependencies_checker/: dag_etl_failure.py  dag_reporting.py  example.py
etl_template/src/dependencies_checker/retw_examples/: DMS_LDM_AZURE_SL.json  Usecase_Test_BOK.json
etl_template/src/generator/: README.md  __init__.py  codelists.py  devops.py  generator.py  publisher.py  test.py
etl_template/src/generator/.TodDelete/: Generator.py
etl_template/src/genesis/: config_file.py  main.py  orchestrator.py  test.py
etl_template/src/log_config/: __init__.py
etl_template/src/logtools/: __init__.py  issue_tracking.py  log_config.py
etl_template/src/pd_extractor/: __init__.py  pd_transform_attribute_mapping.py  pd_transform_source_composition.py
etl_templates/: .gitignore  config.yml  config_morningstar.yml  mkdocs.yml  pyproject.toml  test.py  test2.py  test3.py
etl_templates/docs/: Business_Keys.md  Configuration.md  Dependency_checker.md  Deploy_MDDE.md  Developers.md  Documentation_Creation.md  Extractor.md  Generator.md  Generator_ETL_procs.md  Integrator.md  Logtools.md  MDDE_ETL_Synapse_Pipeline.md  MDDE_ETL_procs.md  Orkestrator.md  Repository_Handler.md  Repository_Manager.md  X_HashKey.md  index.md
etl_templates/docs/Deploy_MDDE/: Deploy_MDDE.md  MDDE_ETL_Synapse_Pipeline.md
etl_templates/docs/Developers/: Developers.md
etl_templates/docs/Genesis/: Configuration.md  Extractor.md  Generator.md  Repository_Manager.md  index.md
etl_templates/docs/Genesis/Deploy_MDDE/: MDDE_ETL_procs.md
etl_templates/docs/Genesis/Integrator/: Integrator.md  X_HashKey.md
etl_templates/docs/Genesis/Orchestrator/: Configuration.md  Orchestrator.md
etl_templates/docs/Integrator/: Integrator.md  X_HashKey.md
etl_templates/docs/Morningstar/: ETL_flow.html  index.md
etl_templates/docs/Orchestrator/: Configuration.md  Orchestrator.md
etl_templates/docs/integrator/: 2.md  dag_implementation.md
etl_templates/docs/stylesheets/: extra.css
etl_templates/docs/tmp/: Generator_ER1.md  Model_Extractor_Trans.md
etl_templates/input/: UsecaseV2.08.ldm  UsecaseV2.12.ldm  UsecaseV2.17a.ldm  UsecaseV2.21a.ldm
etl_templates/input/codeList/ags/: DMS.core Reference Data v1.42 ISSUED.xls
etl_templates/src/: failure_reporting.py  main.py  morningstar.py
etl_templates/src/config/: __init__.py  base.py  config_definitions.py  deploy_mdde.py  devops.py  extractor.py  generator.py  genesis.py  integrator.py  morningstar.py  power_designer.py
etl_templates/src/dependencies_checker/: __init__.py  dag_generator.py  dag_implementation.py  dag_reporting.py  example.py
etl_templates/src/deploy_mdde/: __init__.py  data_code_lists.py  deployment.py
etl_templates/src/deploy_mdde/db_objects/: 3. Central Layer.sqlproj
etl_templates/src/deployment/: __init__.py  deploy_objects_tmp.py  devops.py  generator_leftovers.py  post_deployment.py  publisher.py
etl_templates/src/generator/: __init__.py  code_lists.py  data_code_lists.py  ddl_base.py  ddl_entities.py  ddl_views_base.py  ddl_views_source.py  ddl_views_source_aggr.py  dedicated-pool.sqlfluff  entities.py  format_sql_create_table.py  generator.py  sql_formatter.py  sql_formatter2.py  sql_formatter3.py  test.py  views.py
etl_templates/src/genesis/: __init__.py  config_definition.py  config_file.py  main.py  orchestrator.py
etl_templates/src/integrator/: __init__.py  dag_builder.py  dag_etl_failure.py  dag_etl_simulator.py  dag_generator.py  dag_implementation.py  dag_reporting.py  example.py
etl_templates/src/log_config/: logging_config.py
etl_templates/src/logtools/: color_formatter.py  issue_tracking.py  log_config.py  log_manager.py  tqdm_logging.py
etl_templates/src/orchestrator/: __init__.py  config_definition.py  config_file.py  orchestrator.py  test_decorator.py
etl_templates/src/orchestrator_genesis/: orchestrator.py
etl_templates/src/orchestrator_morningstar/: __init__.py  orchestrator.py
etl_templates/src/pd_extractor/: __init__.py  attribute_mapping_transform.py  base_extractor.py  base_transformer.py  document.py  domains_extractor.py  domains_transformer.py  mapping_attributes_transform.py  mapping_composition_joinconditions_transform.py  mapping_composition_transform.py  mapping_extractor.py  mapping_target_transform.py  model_extractor.py  model_internal_transform.py  model_relationships_transform.py  models_external_transform.py  pd_document.py  pd_extractor_base.py  pd_mapping_extractor.py  pd_model_extractor.py  pd_stereotype_extractor.py  pd_transform_attribute_mapping.py  pd_transform_model_internal.py  pd_transform_models_external.py  pd_transform_object.py  pd_transform_source_composition.py  pd_transform_stereotype.py  pd_transform_target_entity.py  stereotype_extractor.py  stereotype_transform.py  transformer_base.py
etl_templates/src/reporter/: __init__.py  morningstar_report.py
etl_templates/src/repository_db/: __init__.py  devops.py  publisher.py
etl_templates/src/repository_manager/: __init__.py  deploy_objects_tmp.py  file_sql_project.py  project_file.py  repository_handler.py  repository_manager.py  repository_updater.py  sql_repository_manager.py  updater.py
(+194 files in other folders)
