[project]
name = "etl_templates"
version = "0.1.0"
requires-python = ">=3.13.0"
authors = [
    { name = "Mark Zwart", email = "m_zwart@douane.nl" },
    { name = "Youri Jongejan", email = "y.jongejan@douane.nl" },
    { name = "Jeroen Poll", email = "J.Poll@douane.nl" },
]
readme = "README.md"

dependencies = [
    "asttokens==3.0.0",
    "babel==2.17.0",
    "backrefs==5.9",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "dacite==1.9.2",
    "decorator==5.2.1",
    "diff_cover==9.4.1",
    "EditorConfig==0.17.1",
    "executing==2.2.0",
    "fastexcel==0.14.0",
    "ghp-import==2.1.0",
    "griffe==1.7.3",
    "hjson==3.1.0",
    "idna==3.10",
    "igraph==0.11.9",
    "iniconfig==2.1.0",
    "ipython==9.4.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jsbeautifier==1.15.4",
    "jsonpickle==4.1.1",
    "lxml==6.0.0",
    "Markdown==3.8.2",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.2",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.15",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==1.2.1",
    "mkdocs-panzoom-plugin==0.2.2",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.12",
    "networkx==3.5",
    "numpy==2.3.1",
    "packaging==25.0",
    "paginate==0.5.7",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "polars==1.31.0",
    "prompt_toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyarrow==20.0.0",
    "Pygments==2.19.2",
    "pymdown-extensions==10.16",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyvis==0.3.2",
    "PyYAML==6.0.2",
    "pyyaml_env_tag==1.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "sqlfluff==3.4.1",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "super_collections==0.5.3",
    "tblib==3.1.0",
    "termcolor==3.1.0",
    "texttable==1.7.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "xmltodict==0.14.2",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
